Overflow issue Solved

--- a/style.css
+++ b/style.css
@@ -4,8 +4,11 @@
 }
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap');
 
-body {
+html, body {
+    height: 100vh;
+    width: 100%;
   font-family: 'Inter', sans-serif;
+  overflow-x: hidden;
 }
 
 .main {
